[UPD] schemas added [FIX] admin rights